--- a/hometa.html
+++ b/hometa.html
@@ -102,7 +102,7 @@
 
                 </div>
                 <div class="modal-footer">
-                    <button type="submit" class="btn btn-primary" id="submitButton">Save</button>
+                    <button type="submit" class="btn btn-primary" id="sendemailBtn">Save</button>
                     <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
                 </div>
             </div>
